RESOLVED FIXED100902
[BlackBerry] Fix editing/text-iterator/findString-expected.html fail
https://bugs.webkit.org/show_bug.cgi?id=100902
Summary [BlackBerry] Fix editing/text-iterator/findString-expected.html fail
Rob Buis
Reported 2012-10-31 16:23:25 PDT
We can fix this test by just using the regular Page::findString like other ports do.
Attachments
Patch (11.62 KB, patch)
2012-10-31 16:32 PDT, Rob Buis
yong.li.webkit: review+
gtk-ews: commit-queue-
Rob Buis
Comment 1 2012-10-31 16:32:32 PDT
kov's GTK+ EWS bot
Comment 2 2012-10-31 16:42:49 PDT
Yong Li
Comment 3 2012-10-31 17:28:45 PDT
Comment on attachment 171740 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=171740&action=review > Tools/ChangeLog:10 > + Fix the test my using the Page::findString method instead of our own in-page searcher. my => by?
Rob Buis
Comment 4 2012-11-01 07:42:24 PDT
Note You need to log in before you can comment on or make changes to this bug.