Tools/DumpRenderTree/blackberry/DumpRenderTree.cpp
@@ -373,12 +373,12 @@ String DumpRenderTree::dumpFramesAsText(WebCore::Frame* frame)
     if (frame->tree()->parent())
         s = String::format("\n--------\nFrame: '%s'\n--------\n", frame->tree()->uniqueName().string().utf8().data());
 
-    s += documentElement->innerText() + "\n";
+    s = s + documentElement->innerText() + "\n";
 
     if (gTestRunner->dumpChildFramesAsText()) {
         WebCore::FrameTree* tree = frame->tree();
         for (WebCore::Frame* child = tree->firstChild(); child; child = child->tree()->nextSibling())
-            s += dumpFramesAsText(child);
+            s = s + dumpFramesAsText(child);
     }
     return s;
 }
@@ -426,11 +426,11 @@ static String dumpHistoryItem(PassRefPtr<WebCore::HistoryItem> item, int indent,
 
     int start = 0;
     if (current) {
-        result += "curr->";
+        result = result + "curr->";
         start = 6;
     }
     for (int i = start; i < indent; i++)
-        result += " ";
+        result = result + " ";
 
     String url = item->urlString();
     if (url.contains("file://")) {
@@ -441,25 +441,25 @@ static String dumpHistoryItem(PassRefPtr<WebCore::HistoryItem> item, int indent,
         if (res.isEmpty())
             return result;
 
-        result += fileTestString;
-        result += res;
+        result = result + fileTestString;
+        result = result + res;
     } else
-        result += url;
+        result = result + url;
 
     String target = item->target();
     if (!target.isEmpty())
-        result += " (in frame \"" + target + "\")";
+        result = result + " (in frame \"" + target + "\")";
 
     if (item->isTargetItem())
-        result += "  **nav target**";
-    result += "\n";
+        result = result + "  **nav target**";
+    result = result + "\n";
 
     WebCore::HistoryItemVector children = item->children();
     // Must sort to eliminate arbitrary result ordering which defeats reproducible testing.
     nonCopyingSort(children.begin(), children.end(), historyItemCompare);
     unsigned resultSize = children.size();
     for (unsigned i = 0; i < resultSize; ++i)
-        result += dumpHistoryItem(children[i], indent + 4, false);
+        result = result + dumpHistoryItem(children[i], indent + 4, false);
 
     return result;
 }
@@ -476,16 +476,16 @@ static String dumpBackForwardListForWebView()
     bfList->backListWithLimit(maxItems, entries);
     unsigned resultSize = entries.size();
     for (unsigned i = 0; i < resultSize; ++i)
-        result += dumpHistoryItem(entries[i], 8, false);
+        result = result + dumpHistoryItem(entries[i], 8, false);
 
-    result += dumpHistoryItem(bfList->currentItem(), 8, true);
+    result = result + dumpHistoryItem(bfList->currentItem(), 8, true);
 
     bfList->forwardListWithLimit(maxItems, entries);
     resultSize = entries.size();
     for (unsigned i = 0; i < resultSize; ++i)
-        result += dumpHistoryItem(entries[i], 8, false);
+        result = result + dumpHistoryItem(entries[i], 8, false);
 
-    result += "===============================================\n";
+    result = result +  "===============================================\n";
 
     return result;
 }
@@ -506,7 +506,7 @@ void DumpRenderTree::dump()
     String data = dumpAsText ? dumpFramesAsText(mainFrame) : renderTreeDump();
 
     if (gTestRunner->dumpBackForwardList())
-        data += dumpBackForwardListForWebView();
+        data = data + dumpBackForwardListForWebView();
 
     String result = "Content-Type: " + resultMimeType + "\n" + data;
 
@@ -631,7 +631,7 @@ void DumpRenderTree::didFinishDocumentLoadForFrame(WebCore::Frame* frame)
         if (gTestRunner->dumpFrameLoadCallbacks())
             printf("%s - didFinishDocumentLoadForFrame\n", drtFrameDescription(frame).utf8().data());
         else {
-            unsigned pendingFrameUnloadEvents = frame->domWindow()->pendingUnloadEventListeners();
+            unsigned pendingFrameUnloadEvents = frame->document()->domWindow()->pendingUnloadEventListeners();
             if (pendingFrameUnloadEvents)
                 printf("%s - has %u onunload handler(s)\n", drtFrameDescription(frame).utf8().data(), pendingFrameUnloadEvents);
         }
@@ -664,7 +664,7 @@ void DumpRenderTree::didReceiveTitleForFrame(const String& title, WebCore::Frame
         printf("%s - didReceiveTitle: %s\n", drtFrameDescription(frame).utf8().data(), title.utf8().data());
 
     if (gTestRunner->dumpTitleChanges())
-        printf("TITLE CHANGED: '%s'\n", title.utf8().data());
+        printf("TITLE CHANGED: %s\n", title.utf8().data());
 }
 
 // ChromeClient delegates.
@@ -691,10 +691,8 @@ void DumpRenderTree::addMessageToConsole(const String& message, unsigned lineNum
 
 void DumpRenderTree::runJavaScriptAlert(const String& message)
 {
-    if (!testDone) {
+    if (!testDone)
         printf("ALERT: %s\n", message.utf8().data());
-        fflush(stdout);
-    }
 }
 
 bool DumpRenderTree::runJavaScriptConfirm(const String& message)
@@ -765,12 +763,6 @@ void DumpRenderTree::didChangeSelection()
 {
     if (!testDone && gTestRunner->dumpEditingCallbacks())
         printf("EDITING DELEGATE: webViewDidChangeSelection:%s\n", "WebViewDidChangeSelectionNotification");
-}
-
-bool DumpRenderTree::findString(const String& string, WebCore::FindOptions options)
-{
-    WebCore::Page* page = mainFrame ? mainFrame->page() : 0;
-    return page && page->findString(string, options);
 }
 
 bool DumpRenderTree::shouldBeginEditingInDOMRange(WebCore::Range* range)
